--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "lottie-react": "^2.4.0",
+    "material-icons": "^1.13.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "typescript": "^4.9.5",
