--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "antd": "^5.14.2",
+    "axios": "^1.6.7",
     "lottie-react": "^2.4.0",
     "material-icons": "^1.13.12",
     "react": "^18.2.0",
@@ -18,6 +20,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "sass": "^1.71.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
